# d-merge-serde-hkx

./: Cargo.toml  README.md  crates.js  cspell.jsonc  deny.toml  help.html  search-index.js  settings.html  src-files.js
annotate_snippets/: all.html  enum.Level.html  index.html  struct.Annotation.html  struct.Message.html  struct.Renderer.html  struct.Snippet.html
bitflags/: struct.Flag.html  trait.Bits.html  trait.Flags.html
clap/: all.html  enum.ArgAction.html  enum.ColorChoice.html  enum.ValueHint.html  index.html  macro.arg.html  macro.command.html  macro.value_parser.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Command.html  struct.Id.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html  type.Error.html
clap_builder/: all.html  enum.ColorChoice.html  index.html  macro.arg.html  macro.command.html  macro.value_parser.html  struct.Id.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html  type.Error.html
clap_complete/: all.html  enum.ValueHint.html  index.html
clap_complete_command/: all.html  enum.Shell.html  index.html
clap_complete_nushell/: all.html  index.html  struct.Nushell.html
color_print/: all.html  index.html  macro.ceprint.html  macro.ceprintln.html  macro.cformat.html  macro.cprint.html  macro.cprintln.html  macro.cstr.html  macro.cwrite.html  macro.cwriteln.html  macro.untagged.html
color_print_proc_macro/: all.html  index.html  macro.ceprint.html  macro.ceprintln.html  macro.cformat.html  macro.cprint.html  macro.cprintln.html  macro.cstr.html  macro.cwrite.html  macro.cwriteln.html  macro.untagged.html
console/: all.html  enum.Alignment.html  enum.Attribute.html  enum.Color.html  enum.Key.html  enum.TermFamily.html  enum.TermTarget.html  fn.colors_enabled.html  fn.colors_enabled_stderr.html  fn.measure_text_width.html  fn.pad_str.html  fn.pad_str_with.html  fn.set_colors_enabled.html  fn.set_colors_enabled_stderr.html  fn.strip_ansi_codes.html  fn.style.html  fn.truncate_str.html  fn.user_attended.html  fn.user_attended_stderr.html  index.html  struct.AnsiCodeIterator.html  struct.Emoji.html  struct.Style.html  struct.StyledObject.html  struct.Term.html  struct.TermFeatures.html  struct.WithoutAnsi.html
crates/serde_hkx_features/: Cargo.toml
crates/serde_hkx_features/src/: diff.rs  id_maker.rs  lib.rs
crates/serde_hkx_features/src/convert/: mod.rs
crates/serde_hkx_features/src/serde_extra/: de.rs  error.rs  ser.rs
diff/: all.html  fn.colored_diff.html  fn.diff.html  index.html  sidebar-items.js
educe/: all.html  derive.Educe.html  index.html
encoding_rs_io/: all.html  index.html  struct.DecodeReaderBytes.html  (+1 more)
hkxc/: all.html  (+2 more)
(+10709 files in other folders)
