[package]
name = "serde_hkx_features"
description = "Havok Behavior (De)Serialization easy-to-use upper wrapper for CLI/GUI"
version.workspace = true
readme.workspace = true

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, optional = true }          # For CLI
encoding_rs_io = "0.1.7"                              # Read any string
indexmap = { workspace = true, features = ["rayon"] } # Ordering HashMap
jwalk = { workspace = true }                          # To enumerate json class files
parse-display = { workspace = true }                  # Display derive
rayon = { workspace = true }                          # Parallel
snafu = { workspace = true }                          # Define all error patterns(with backtrace)
tokio = { workspace = true, features = ["fs", "rt"] }
tracing = { workspace = true, optional = true }

# serde ext
basic-toml = { version = "0.1.10", optional = true }
schemars = { workspace = true, features = ["indexmap2"], optional = true }
serde = { workspace = true, optional = true }
serde_yml = { version = "0.0.12", optional = true }
simd-json = { version = "0.15.1", optional = true }

# workspace members
diff = { workspace = true }                                               # Create diff
havok_serde = { workspace = true }
havok_classes = { workspace = true, features = ["ignore_duplicates"] }
serde_hkx = { workspace = true }
havok_types = { workspace = true, features = ["serde"], optional = true }

[dev-dependencies]
quick_tracing = { workspace = true }
serde_hkx = { workspace = true, features = ["tracing"] }
tracing = { workspace = true }

[features]
# default = ["serde_default"] # For debug
# default = ["extra_fmt"] # For debug
# default = ["json_schema"] # For debug

# `derive(clap::ValueEnum)` For `OutFormat`
clap = ["dep:clap"]
# Enable tracing logging
tracing = ["dep:tracing", "serde_hkx/tracing"]
# Extra output format(json, toml, yaml)
extra_fmt = [
  "dep:basic-toml",
  "dep:havok_types",
  "dep:serde",
  "dep:serde_yml",
  "dep:simd-json",
  "havok_classes/serde",
  "indexmap/serde",
]
# Json schema generation
json_schema = [
  "dep:havok_types",
  "dep:schemars",
  "dep:serde",
  "dep:simd-json",
  "havok_classes/json_schema",
  "indexmap/serde",
]

# Enable serde values to fall-back to default ones even if class fields don't have the `SERIALIZED_IGNORED` flag.
serde_default = ["havok_classes/serde_default"]

[lints]
workspace = true
